--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 .table {padding: 1em; position: relative;}
 
+.score {float:right; margin-right: 2%; }
+
 .game-over {position: relative; z-index: 100; border: 4px outset; background-color: #ff7; text-align: center; padding: 2em; margin-top:50%; margin-left: auto; margin-right: auto; width: 60%;}
 
 .well-done {position: relative; z-index: 100; border: 4px outset; background-color: #ff7; text-align: center; padding: 2em; margin-top:50%; margin-left: auto; margin-right: auto; width: 60%;}
@@ -36,52 +38,53 @@
 
 .check { position: absolute; display: block; top: 560px; left: 30px; }
 
-.card-empty{ width: 42px; height: 65px; line-height: 80px; text-align: center; font-size: 32px; color: #bbb; margin: 4px; border: 1px dashed #ccc; border-radius: 4px}
-.card-not-empty{ width: 42px; height: 65px; line-height: 80px; text-align: center; font-size: 32px; color: #bbb; margin: 4px; border: 1px transparent; border-radius: 4px}
-.card-back{ width: 42px; height: 65px; background-size: contain; background-image: url('card-back.png'); background-repeat: no-repeat; }
+.card-empty{   line-height: 80px; text-align: center; font-size: 32px; color: #bbb; margin: 4px; border: 1px dashed #ccc; border-radius: 4px}
+.card-not-empty{   line-height: 80px; text-align: center; font-size: 32px; color: #bbb; margin: 4px; border: 1px transparent; border-radius: 4px}
+.card-back{   background-size: contain; background-image: url('card-back.png'); background-repeat: no-repeat; }
 .card-- {width: 0px !important; height: 0px !important;}
-.card-0-1{ width: 42px; height: 65px; background-size: contain; background-image: url('card-0-1.png'); background-repeat: no-repeat; }
-.card-0-2{ width: 42px; height: 65px; background-size: contain; background-image: url('card-0-2.png'); background-repeat: no-repeat;  }
-.card-0-3{ width: 42px; height: 65px; background-size: contain; background-image: url('card-0-3.png'); background-repeat: no-repeat;  }
-.card-0-4{ width: 42px; height: 65px; background-size: contain; background-image: url('card-0-4.png'); background-repeat: no-repeat; }
-.card-0-5{ width: 42px; height: 65px; background-size: contain; background-image: url('card-0-5.png'); background-repeat: no-repeat; }
-.card-0-6{ width: 42px; height: 65px; background-size: contain; background-image: url('card-0-6.png'); background-repeat: no-repeat; }
-.card-0-7{ width: 42px; height: 65px; background-size: contain; background-image: url('card-0-7.png'); background-repeat: no-repeat; }
-.card-0-8{ width: 42px; height: 65px; background-size: contain; background-image: url('card-0-8.png'); background-repeat: no-repeat; }
-.card-0-9{ width: 42px; height: 65px; background-size: contain; background-image: url('card-0-9.png'); background-repeat: no-repeat; }
-.card-0-10{ width: 42px; height: 65px; background-size: contain; background-image: url('card-0-10.png'); background-repeat: no-repeat; }
-.card-1-1{ width: 42px; height: 65px; background-size: contain; background-image: url('card-1-1.png'); background-repeat: no-repeat; }
-.card-1-2{ width: 42px; height: 65px; background-size: contain; background-image: url('card-1-2.png'); background-repeat: no-repeat; }
-.card-1-3{ width: 42px; height: 65px; background-size: contain; background-image: url('card-1-3.png'); background-repeat: no-repeat; }
-.card-1-4{ width: 42px; height: 65px; background-size: contain; background-image: url('card-1-4.png'); background-repeat: no-repeat; }
-.card-1-5{ width: 42px; height: 65px; background-size: contain; background-image: url('card-1-5.png'); background-repeat: no-repeat; }
-.card-1-6{ width: 42px; height: 65px; background-size: contain; background-image: url('card-1-6.png'); background-repeat: no-repeat; }
-.card-1-7{ width: 42px; height: 65px; background-size: contain; background-image: url('card-1-7.png'); background-repeat: no-repeat; }
-.card-1-8{ width: 42px; height: 65px; background-size: contain; background-image: url('card-1-8.png'); background-repeat: no-repeat; }
-.card-1-9{ width: 42px; height: 65px; background-size: contain; background-image: url('card-1-9.png'); background-repeat: no-repeat; }
-.card-1-10{ width: 42px; height: 65px; background-size: contain; background-image: url('card-1-10.png'); background-repeat: no-repeat; }
-.card-2-1{ width: 42px; height: 65px; background-size: contain; background-image: url('card-2-1.png'); background-repeat: no-repeat; }
-.card-2-2{ width: 42px; height: 65px; background-size: contain; background-image: url('card-2-2.png'); background-repeat: no-repeat; }
-.card-2-3{ width: 42px; height: 65px; background-size: contain; background-image: url('card-2-3.png'); background-repeat: no-repeat; }
-.card-2-4{ width: 42px; height: 65px; background-size: contain; background-image: url('card-2-4.png'); background-repeat: no-repeat; }
-.card-2-5{ width: 42px; height: 65px; background-size: contain; background-image: url('card-2-5.png'); background-repeat: no-repeat; }
-.card-2-6{ width: 42px; height: 65px; background-size: contain; background-image: url('card-2-6.png'); background-repeat: no-repeat; }
-.card-2-7{ width: 42px; height: 65px; background-size: contain; background-image: url('card-2-7.png'); background-repeat: no-repeat; }
-.card-2-8{ width: 42px; height: 65px; background-size: contain; background-image: url('card-2-8.png'); background-repeat: no-repeat; }
-.card-2-9{ width: 42px; height: 65px; background-size: contain; background-image: url('card-2-9.png'); background-repeat: no-repeat; }
-.card-2-10{ width: 42px; height: 65px; background-size: contain; background-image: url('card-2-10.png'); background-repeat: no-repeat; }
-.card-3-1{ width: 42px; height: 65px; background-size: contain; background-image: url('card-3-1.png'); background-repeat: no-repeat; }
-.card-3-2{ width: 42px; height: 65px; background-size: contain; background-image: url('card-3-2.png'); background-repeat: no-repeat; }
-.card-3-3{ width: 42px; height: 65px; background-size: contain; background-image: url('card-3-3.png'); background-repeat: no-repeat; }
-.card-3-4{ width: 42px; height: 65px; background-size: contain; background-image: url('card-3-4.png'); background-repeat: no-repeat; }
-.card-3-5{ width: 42px; height: 65px; background-size: contain; background-image: url('card-3-5.png'); background-repeat: no-repeat; }
-.card-3-6{ width: 42px; height: 65px; background-size: contain; background-image: url('card-3-6.png'); background-repeat: no-repeat; }
-.card-3-7{ width: 42px; height: 65px; background-size: contain; background-image: url('card-3-7.png'); background-repeat: no-repeat; }
-.card-3-8{ width: 42px; height: 65px; background-size: contain; background-image: url('card-3-8.png'); background-repeat: no-repeat; }
-.card-3-9{ width: 42px; height: 65px; background-size: contain; background-image: url('card-3-9.png'); background-repeat: no-repeat; }
-.card-3-10{ width: 42px; height: 65px; background-size: contain; background-image: url('card-3-10.png'); background-repeat: no-repeat; }
+.card-0-1{ background-size: contain; background-image: url('card-0-1.png'); background-repeat: no-repeat; }
+.card-0-2{  background-size: contain; background-image: url('card-0-2.png'); background-repeat: no-repeat;  }
+.card-0-3{  background-size: contain; background-image: url('card-0-3.png'); background-repeat: no-repeat;  }
+.card-0-4{  background-size: contain; background-image: url('card-0-4.png'); background-repeat: no-repeat; }
+.card-0-5{  background-size: contain; background-image: url('card-0-5.png'); background-repeat: no-repeat; }
+.card-0-6{ background-size: contain; background-image: url('card-0-6.png'); background-repeat: no-repeat; }
+.card-0-7{  background-size: contain; background-image: url('card-0-7.png'); background-repeat: no-repeat; }
+.card-0-8{   background-size: contain; background-image: url('card-0-8.png'); background-repeat: no-repeat; }
+.card-0-9{   background-size: contain; background-image: url('card-0-9.png'); background-repeat: no-repeat; }
+.card-0-10{   background-size: contain; background-image: url('card-0-10.png'); background-repeat: no-repeat; }
+.card-1-1{   background-size: contain; background-image: url('card-1-1.png'); background-repeat: no-repeat; }
+.card-1-2{   background-size: contain; background-image: url('card-1-2.png'); background-repeat: no-repeat; }
+.card-1-3{   background-size: contain; background-image: url('card-1-3.png'); background-repeat: no-repeat; }
+.card-1-4{   background-size: contain; background-image: url('card-1-4.png'); background-repeat: no-repeat; }
+.card-1-5{   background-size: contain; background-image: url('card-1-5.png'); background-repeat: no-repeat; }
+.card-1-6{   background-size: contain; background-image: url('card-1-6.png'); background-repeat: no-repeat; }
+.card-1-7{   background-size: contain; background-image: url('card-1-7.png'); background-repeat: no-repeat; }
+.card-1-8{   background-size: contain; background-image: url('card-1-8.png'); background-repeat: no-repeat; }
+.card-1-9{   background-size: contain; background-image: url('card-1-9.png'); background-repeat: no-repeat; }
+.card-1-10{   background-size: contain; background-image: url('card-1-10.png'); background-repeat: no-repeat; }
+.card-2-1{   background-size: contain; background-image: url('card-2-1.png'); background-repeat: no-repeat; }
+.card-2-2{   background-size: contain; background-image: url('card-2-2.png'); background-repeat: no-repeat; }
+.card-2-3{   background-size: contain; background-image: url('card-2-3.png'); background-repeat: no-repeat; }
+.card-2-4{   background-size: contain; background-image: url('card-2-4.png'); background-repeat: no-repeat; }
+.card-2-5{   background-size: contain; background-image: url('card-2-5.png'); background-repeat: no-repeat; }
+.card-2-6{   background-size: contain; background-image: url('card-2-6.png'); background-repeat: no-repeat; }
+.card-2-7{   background-size: contain; background-image: url('card-2-7.png'); background-repeat: no-repeat; }
+.card-2-8{   background-size: contain; background-image: url('card-2-8.png'); background-repeat: no-repeat; }
+.card-2-9{   background-size: contain; background-image: url('card-2-9.png'); background-repeat: no-repeat; }
+.card-2-10{   background-size: contain; background-image: url('card-2-10.png'); background-repeat: no-repeat; }
+.card-3-1{   background-size: contain; background-image: url('card-3-1.png'); background-repeat: no-repeat; }
+.card-3-2{   background-size: contain; background-image: url('card-3-2.png'); background-repeat: no-repeat; }
+.card-3-3{   background-size: contain; background-image: url('card-3-3.png'); background-repeat: no-repeat; }
+.card-3-4{   background-size: contain; background-image: url('card-3-4.png'); background-repeat: no-repeat; }
+.card-3-5{   background-size: contain; background-image: url('card-3-5.png'); background-repeat: no-repeat; }
+.card-3-6{   background-size: contain; background-image: url('card-3-6.png'); background-repeat: no-repeat; }
+.card-3-7{   background-size: contain; background-image: url('card-3-7.png'); background-repeat: no-repeat; }
+.card-3-8{   background-size: contain; background-image: url('card-3-8.png'); background-repeat: no-repeat; }
+.card-3-9{   background-size: contain; background-image: url('card-3-9.png'); background-repeat: no-repeat; }
+.card-3-10{   background-size: contain; background-image: url('card-3-10.png'); background-repeat: no-repeat; }
 
 @media only screen and (orientation: landscape) {
+
 .stock { position: absolute; top: 20px; left: 2%; }
 
 .waste { position: absolute; top: 20px; left: 18%; }
