--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
-.table {padding: 1em; position: relative;}
+.table {padding: 1em; position: relative; width: 100%; height: 100%;}
 
 .score {float:right; margin-right: 2%; color: #ccc }
+
+.info-panel {position: absolute; z-index: 100; top: 0; left: 0; width: 100%; height: 100%;}
 
 .game-over {position: relative; z-index: 100; border: 4px outset; background-color: #ff7; text-align: center; padding: 2em; margin-top:50%; margin-left: auto; margin-right: auto; width: 60%;}
 
